Making sure application is not available if it is not visible or it is disabled